--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
-	"name": "Cloud To Butt",
+	"name": "Developer Tools",
 	"version": "1.0",
-	"description": "Replaces the text 'the cloud' with 'my butt'.",
+	"description": "Developer debugging utility",
 	"content_scripts": 
 	[
 		{
